# ChangeLog for virtual/perl-IO-Compress-Base
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/virtual/perl-IO-Compress-Base/ChangeLog,v 1.3 2009/03/13 22:27:06 tove Exp $

  13 Mar 2009; Torsten Veller <tove@gentoo.org>
  -perl-IO-Compress-Base-2.008.ebuild:
  Cleanup

*perl-IO-Compress-Base-2.015 (01 Nov 2008)
*perl-IO-Compress-Base-2.008 (01 Nov 2008)
*perl-IO-Compress-Base-2.005 (01 Nov 2008)

  01 Nov 2008; Yuval Yaari <yuval@gentoo.org> +metadata.xml,
  +perl-IO-Compress-Base-2.005.ebuild, +perl-IO-Compress-Base-2.008.ebuild,
  +perl-IO-Compress-Base-2.015.ebuild:
  Adding virtuals for dual-lifed modules that come with perl-5.10
