@@ -1,3 +1,4 @@
 EBUILD perl-IO-Compress-Base-2.015.ebuild 598 RMD160 3ec2c8b814148e70387b78063e945958dcb9a3e4 SHA1 86ec4790be9ea7c7ab78620cfd0d0edebbca7142 SHA256 3675d989427bc452a37a06b822befcc488b4db1c9ecd957964fd811efe8ac827
-MISC ChangeLog 700 RMD160 b31c76dd549a567a1d9d5ca13ba24ab8a61b9c5a SHA1 4d314a153248032b53f556d642f36d36dead8d0a SHA256 80a34f3f1abc50a1ed331a988be6806223bbad2d21e2a21b9d1222eded4a5a5a
+EBUILD perl-IO-Compress-Base-2.019.ebuild 594 RMD160 bfaa6e46d3936dc2581072915c46f713442b39ca SHA1 1c8266df8386b670714c6c054d63f50797972d83 SHA256 d29dc6b8f7f1c5c916e5471c7f6e084b7ea66b7984619ad4949b1cf959b2368e
+MISC ChangeLog 847 RMD160 e7725c133ca1e5c41539f1bf53e9f18eed0f3d61 SHA1 a6cacba9ad74e8a10cfd8e5996bc6e84b9bc215d SHA256 6b3a3633c3c85047687f9009b67411547e55eb8779f989444cbf29e9d74fb3fc
 MISC metadata.xml 305 RMD160 647980838c590f54441a053916ea629e53e551c0 SHA1 99ef1deeae9a934fb6e46cf5fc4a5fcb8379a74a SHA256 f05dbef15061919972882cab07057e102760a542beba17d131194091401cd7ca
