@@ -1,0 +1,16 @@
+# Copyright 1999-2009 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/virtual/perl-IO-Compress-Base/perl-IO-Compress-Base-2.019.ebuild,v 1.1 2009/05/04 14:45:09 tove Exp $
+
+DESCRIPTION="Base Class for IO::Compress modules"
+HOMEPAGE="http://www.gentoo.org/proj/en/perl/"
+SRC_URI=""
+
+LICENSE="GPL-2"
+SLOT="0"
+KEYWORDS="~x86-freebsd ~x86-interix ~amd64-linux ~ia64-linux ~x86-linux ~ppc-macos ~x86-macos ~sparc-solaris ~sparc64-solaris ~x64-solaris ~x86-solaris"
+
+IUSE=""
+DEPEND=""
+
+RDEPEND="~virtual/perl-IO-Compress-${PV}"
