@@ -1,6 +1,12 @@
 # ChangeLog for virtual/perl-IO-Compress-Base
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/virtual/perl-IO-Compress-Base/ChangeLog,v 1.3 2009/03/13 22:27:06 tove Exp $
+# $Header: /var/cvsroot/gentoo-x86/virtual/perl-IO-Compress-Base/ChangeLog,v 1.4 2009/05/04 14:45:09 tove Exp $
+
+*perl-IO-Compress-Base-2.019 (04 May 2009)
+
+  04 May 2009; Torsten Veller <tove@gentoo.org>
+  +perl-IO-Compress-Base-2.019.ebuild:
+  Version bump
 
   13 Mar 2009; Torsten Veller <tove@gentoo.org>
   -perl-IO-Compress-Base-2.008.ebuild:
